--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -55,6 +55,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install python-dotenv
         # Install from requirements.txt if it exists
         if [ -f requirements.txt ]; then
           pip install -r requirements.txt
