--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -73,8 +73,8 @@ jobs:
     - name: Run idx script
       env:
         # Credentials stored in GitHub Secrets
-        GT_PW: ${{ secrets.GOOGLE_PW }}
-        DEEP_URL: ${{ secrets.APP_URL }}
+        GOOGLE_PW: ${{ secrets.GOOGLE_PW }}
+        APP_URL: ${{ secrets.APP_URL }}
       run: |
         python main.py
         
