--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 jobs:
   keepalive:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     
     steps:
     - name: Checkout code
@@ -69,6 +69,12 @@ jobs:
         else
           echo "Using cached Playwright browsers"
         fi
+    
+    - name: 创建WARP网络
+      uses: fscarmen/warp-on-actions@v1.3
+      with:
+        stack: dual        # Optional. Support [ ipv4, ipv6, dual ]. Default is dual.
+        mode: client    # Optional. Support [ wireguard, client ]. Default is wireguard.  
         
     - name: Run idx script
       env:
