--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,10 +1,11 @@
 name: IDX Keepalive
 on:
   schedule:
-    # Run keepalive every 1 xs
-    - cron: '0 * * * *'  
+    # Run keepalive every 1 hour
+    - cron: '0 * * * *'
   # Manual trigger option for testing
   workflow_dispatch:
+
 jobs:
   keepalive:
     runs-on: ubuntu-22.04
@@ -69,13 +70,22 @@ jobs:
         else
           echo "Using cached Playwright browsers"
         fi
+        # Install Xvfb for headful mode in CI environment
+        sudo apt-get update && sudo apt-get install -y xvfb
         
     - name: Run idx script
       env:
         # Credentials stored in GitHub Secrets
         GOOGLE_PW: ${{ secrets.GOOGLE_PW }}
         APP_URL: ${{ secrets.APP_URL }}
+        # Set display for Xvfb
+        DISPLAY: ":99.0"
       run: |
+        # Start virtual display server
+        Xvfb :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
+        # Wait for Xvfb to start
+        sleep 3
+        # Run the script
         python main.py
         
     - name: Save cookies cache
