--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -13,7 +13,16 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-    
+      
+    - name: Download Google Cookies
+      run: |
+      curl -s -L "${{ secrets.COOK_URL }}" -o google_cookies.json
+      if [ -f google_cookies.json ]; then
+        echo "Successfully downloaded google_cookies.json"
+      else
+        echo "Error: Failed to download google_cookies.json"
+      fi
+      
     - name: Restore cookies cache
       id: cache-cookies
       uses: actions/cache/restore@v3
