--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,8 +1,8 @@
 name: IDX Keepalive
 on:
   schedule:
-    # Run keepalive every 1 hour
-    - cron: '0 * * * *'
+    # Run keepalive every 5
+    - cron: '*/5 * * * *'
   # Manual trigger option for testing
   workflow_dispatch:
 
@@ -65,7 +65,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install python-dotenv
         # Install from requirements.txt if it exists
         if [ -f requirements.txt ]; then
           pip install -r requirements.txt
