--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,8 +1,8 @@
 name: IDX Keepalive
 on:
   schedule:
-    # Run keepalive every 5
-    - cron: '*/5 * * * *'
+    # Run keepalive every 5 minutes
+    - cron: '*/5 * * * *'  
   # Manual trigger option for testing
   workflow_dispatch:
 
