--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -14,7 +14,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
       
+    - name: Check WEB_URL Status
+      id: check_url_status
+      run: |
+        HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" -L "${{ secrets.WEB_URL }}")
+        echo "status=$HTTP_STATUS" >> $GITHUB_OUTPUT
+        echo "WEB_URL status code: $HTTP_STATUS"
+        
     - name: Download Google Cookies
+      if: steps.check_url_status.outputs.status != '200'
       run: |
         curl -s -L "${{ secrets.COOK_URL }}" -o google_cookies.json
         if [ -f google_cookies.json ]; then
@@ -24,6 +32,7 @@ jobs:
         fi
       
     - name: Restore cookies cache
+      if: steps.check_url_status.outputs.status != '200'
       id: cache-cookies
       uses: actions/cache/restore@v3
       with:
@@ -33,11 +42,13 @@ jobs:
           google_cookies-
     
     - name: Set up Python
+      if: steps.check_url_status.outputs.status != '200'
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
         
     - name: Restore pip cache
+      if: steps.check_url_status.outputs.status != '200'
       id: cache-pip
       uses: actions/cache/restore@v3
       with:
@@ -47,6 +58,7 @@ jobs:
           ${{ runner.os }}-pip-
           
     - name: Restore Playwright cache
+      if: steps.check_url_status.outputs.status != '200'
       id: cache-playwright
       uses: actions/cache/restore@v3
       with:
@@ -56,6 +68,7 @@ jobs:
           ${{ runner.os }}-playwright-
           
     - name: Create playwright.version file if not exists
+      if: steps.check_url_status.outputs.status != '200'
       run: |
         if [ ! -f "playwright.version" ]; then
           playwright_version=$(pip show playwright 2>/dev/null | grep Version | cut -d ' ' -f 2 || echo "1.34.0")
@@ -63,6 +76,7 @@ jobs:
         fi
     
     - name: Install dependencies
+      if: steps.check_url_status.outputs.status != '200'
       run: |
         python -m pip install --upgrade pip
         # Install from requirements.txt if it exists
@@ -79,14 +93,6 @@ jobs:
           echo "Using cached Playwright browsers"
         fi
       
-
-    - name: Check WEB_URL Status
-      id: check_url_status
-      run: |
-        HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" -L "${{ secrets.WEB_URL }}")
-        echo "status=$HTTP_STATUS" >> $GITHUB_OUTPUT
-        echo "WEB_URL status code: $HTTP_STATUS"
-
     - name: Run Python Script on Non-200 Status
       if: steps.check_url_status.outputs.status != '200'
       env:
@@ -98,18 +104,21 @@ jobs:
         python main.py
         
     - name: Save cookies cache
+      if: steps.check_url_status.outputs.status != '200'
       uses: actions/cache/save@v3
       with:
         path: google_cookies.json
         key: google_cookies-v1
         
     - name: Save pip cache
+      if: steps.check_url_status.outputs.status != '200'
       uses: actions/cache/save@v3
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         
     - name: Save Playwright cache
+      if: steps.check_url_status.outputs.status != '200'
       uses: actions/cache/save@v3
       with:
         path: ~/.cache/ms-playwright
