--- a/.github/workflows/Keepalive.yml
+++ b/.github/workflows/Keepalive.yml
@@ -1,4 +1,4 @@
-name: IDX Keepalive
+name: idx-Keepalive 2小时
 on:
   schedule:
     # UTC times equivalent to Beijing time (UTC+8)
@@ -14,16 +14,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-      
-    - name: Check WEB_URL Status
-      id: check_url_status
-      run: |
-        HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" -L "${{ secrets.WEB_URL }}")
-        echo "status=$HTTP_STATUS" >> $GITHUB_OUTPUT
-        echo "WEB_URL status code: $HTTP_STATUS"
-        
+
     - name: Download Google Cookies
-      if: steps.check_url_status.outputs.status != '200'
       run: |
         curl -s -L "${{ secrets.COOK_URL }}" -o google_cookies.json
         if [ -f google_cookies.json ]; then
@@ -33,7 +25,6 @@ jobs:
         fi
       
     - name: Restore cookies cache
-      if: steps.check_url_status.outputs.status != '200'
       id: cache-cookies
       uses: actions/cache/restore@v3
       with:
@@ -43,13 +34,11 @@ jobs:
           google_cookies-
     
     - name: Set up Python
-      if: steps.check_url_status.outputs.status != '200'
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
         
     - name: Restore pip cache
-      if: steps.check_url_status.outputs.status != '200'
       id: cache-pip
       uses: actions/cache/restore@v3
       with:
@@ -59,7 +48,6 @@ jobs:
           ${{ runner.os }}-pip-
           
     - name: Restore Playwright cache
-      if: steps.check_url_status.outputs.status != '200'
       id: cache-playwright
       uses: actions/cache/restore@v3
       with:
@@ -69,7 +57,6 @@ jobs:
           ${{ runner.os }}-playwright-
           
     - name: Create playwright.version file if not exists
-      if: steps.check_url_status.outputs.status != '200'
       run: |
         if [ ! -f "playwright.version" ]; then
           playwright_version=$(pip show playwright 2>/dev/null | grep Version | cut -d ' ' -f 2 || echo "1.34.0")
@@ -77,7 +64,6 @@ jobs:
         fi
     
     - name: Install dependencies
-      if: steps.check_url_status.outputs.status != '200'
       run: |
         python -m pip install --upgrade pip
         # Install from requirements.txt if it exists
@@ -95,7 +81,6 @@ jobs:
         fi
       
     - name: Run Python Script on Non-200 Status
-      if: steps.check_url_status.outputs.status != '200'
       env:
         GOOGLE_PW: ${{ secrets.GOOGLE_PW }}
         APP_URL: ${{ secrets.APP_URL }}
@@ -105,21 +90,18 @@ jobs:
         python main.py
         
     - name: Save cookies cache
-      if: steps.check_url_status.outputs.status != '200'
       uses: actions/cache/save@v3
       with:
         path: google_cookies.json
         key: google_cookies-v1
         
     - name: Save pip cache
-      if: steps.check_url_status.outputs.status != '200'
       uses: actions/cache/save@v3
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         
     - name: Save Playwright cache
-      if: steps.check_url_status.outputs.status != '200'
       uses: actions/cache/save@v3
       with:
         path: ~/.cache/ms-playwright
