--- a/.github/workflows/Keepalive.yml
+++ b/.github/workflows/Keepalive.yml
@@ -1,92 +1,76 @@
-
-name: IDX-Keepalive 2小时
+name: IDX-Keepalive 2-Hour Intervals
 on:
   schedule:
     # Beijing time is UTC+8, schedule in UTC
-    # Run at 6:00, 8:00, 10:00, 12:00, 14:00, 16:00, 18:00, 20:00, 22:00(Beijing time)
-    - cron: '0 22 * * *'
+    # Run at 6:00, 8:00, 10:00, 12:00, 14:00, 16:00, 18:00, 20:00, 22:00 (Beijing time)
+    - cron: '0 22,23 * * *'
   # Manual trigger option
   workflow_dispatch:
 
 jobs:
   keepalive:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
-
+      uses: actions/checkout@v4
+      
+    - name: Restore latest cookies cache
+      id: cache-cookies-restore
+      uses: actions/cache/restore@v4
+      with:
+        path: google_cookies.json
+        key: google_cookies-restore-attempt-${{ runner.os }}
+        restore-keys: |
+          google_cookies-
+    
+    - name: Check if cache was found
+      id: check-cache
+      run: |
+        if [ -f "google_cookies.json" ]; then
+          echo "CACHE_HIT=true" >> $GITHUB_OUTPUT
+          echo "Using cached cookies file"
+        else
+          echo "CACHE_HIT=false" >> $GITHUB_OUTPUT
+          echo "No cached cookies found"
+        fi
+    
     - name: Download Google Cookies
+      if: steps.check-cache.outputs.CACHE_HIT != 'true'
       run: |
         curl -s -L "${{ secrets.COOK_URL }}" -o google_cookies.json
         if [ -f google_cookies.json ]; then
-           echo "Successfully downloaded google_cookies.json"
+          echo "Downloaded google_cookies.json successfully"
         else
-           echo "Error: Failed to download google_cookies.json"
+          echo "Error: Failed to download google_cookies.json"
+          exit 1
         fi
-      
-    - name: Restore latest cookies cache
-      if: steps.check_url_status.outputs.status != '200'
-      id: cache-cookies-restore
-      uses: actions/cache/restore@v3
-      with:
-        path: google_cookies.json # This ensures it overwrites the local file if cache is found
-        key: google_cookies-restore-attempt-${{ runner.os }}
-        restore-keys: |
-          google_cookies- # Cache action will find the newest cache starting with this prefix
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.10'
+        cache: 'pip'
         
-    - name: Restore pip cache
-      id: cache-pip
-      uses: actions/cache/restore@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-          
-    - name: Restore Playwright cache
-      id: cache-playwright
-      uses: actions/cache/restore@v3
-      with:
-        path: ~/.cache/ms-playwright
-        key: ${{ runner.os }}-playwright-${{ hashFiles('**/playwright.version') }}
-        restore-keys: |
-          ${{ runner.os }}-playwright-
-          
-    - name: Create playwright.version file if not exists
-      run: |
-        if [ ! -f "playwright.version" ]; then
-          playwright_version=$(pip show playwright 2>/dev/null | grep Version | cut -d ' ' -f 2 || echo "1.34.0")
-          echo "$playwright_version" > playwright.version
-        fi
-    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        
         # Install from requirements.txt if it exists
         if [ -f requirements.txt ]; then
           pip install -r requirements.txt
         else
           pip install playwright
         fi
-        # Only install Playwright browsers if cache doesn't exist
-        if [ "${{ steps.cache-playwright.outputs.cache-hit }}" != 'true' ]; then
-          echo "Installing Playwright browsers..."
-          python -m playwright install firefox
-        else
-          echo "Using cached Playwright browsers"
-        fi
+    
+    - name: Setup Playwright
+      id: setup-playwright
+      uses: microsoft/playwright-github-action@v1
       
     - name: Run Python Script
       env:
         GOOGLE_PW: ${{ secrets.GOOGLE_PW }}
         APP_URL: ${{ secrets.APP_URL }}
-        WEB_URL: ${{ secrets.WEB_URL }}
       run: |
         # Run the script
         python main.py
@@ -94,21 +78,9 @@ jobs:
     - name: Get current timestamp for cookie cache key
       id: timestamp_generator
       run: echo "CACHE_TIMESTAMP=$(date +%Y%m%d%H%M%S)" >> $GITHUB_OUTPUT
-
+      
     - name: Save cookies cache with timestamp
-      uses: actions/cache/save@v3
+      uses: actions/cache/save@v4
       with:
         path: google_cookies.json
         key: google_cookies-${{ steps.timestamp_generator.outputs.CACHE_TIMESTAMP }}
-        
-    - name: Save pip cache
-      uses: actions/cache/save@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        
-    - name: Save Playwright cache
-      uses: actions/cache/save@v3
-      with:
-        path: ~/.cache/ms-playwright
-        key: ${{ runner.os }}-playwright-${{ hashFiles('**/playwright.version') }}        
