--- a/.github/workflows/Keepalive.yml
+++ b/.github/workflows/Keepalive.yml
@@ -53,19 +53,22 @@ jobs:
         cache: 'pip'
         
     - name: Install dependencies
+      if: steps.check_url_status.outputs.status != '200'
       run: |
         python -m pip install --upgrade pip
-        
         # Install from requirements.txt if it exists
         if [ -f requirements.txt ]; then
           pip install -r requirements.txt
         else
           pip install playwright
         fi
-    
-    - name: Setup Playwright
-      id: setup-playwright
-      uses: microsoft/playwright-github-action@v1
+        # Only install Playwright browsers if cache doesn't exist
+        if [ "${{ steps.cache-playwright.outputs.cache-hit }}" != 'true' ]; then
+          echo "Installing Playwright browsers..."
+          python -m playwright install firefox
+        else
+          echo "Using cached Playwright browsers"
+        fi
       
     - name: Run Python Script
       env:
