--- a/.github/workflows/Keepalive.yml
+++ b/.github/workflows/Keepalive.yml
@@ -9,15 +9,15 @@ on:
 
 jobs:
   keepalive:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v3
       
     - name: Restore latest cookies cache
       id: cache-cookies-restore
-      uses: actions/cache/restore@v4
+      uses: actions/cache/restore@v3
       with:
         path: google_cookies.json
         key: google_cookies-restore-attempt-${{ runner.os }}
@@ -47,13 +47,36 @@ jobs:
         fi
     
     - name: Set up Python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-        cache: 'pip'
         
+    - name: Restore pip cache
+      id: cache-pip
+      uses: actions/cache/restore@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+          
+    - name: Restore Playwright cache
+      id: cache-playwright
+      uses: actions/cache/restore@v3
+      with:
+        path: ~/.cache/ms-playwright
+        key: ${{ runner.os }}-playwright-${{ hashFiles('**/playwright.version') }}
+        restore-keys: |
+          ${{ runner.os }}-playwright-
+          
+    - name: Create playwright.version file if not exists
+      run: |
+        if [ ! -f "playwright.version" ]; then
+          playwright_version=$(pip show playwright 2>/dev/null | grep Version | cut -d ' ' -f 2 || echo "1.34.0")
+          echo "$playwright_version" > playwright.version
+        fi
+    
     - name: Install dependencies
-      if: steps.check_url_status.outputs.status != '200'
       run: |
         python -m pip install --upgrade pip
         # Install from requirements.txt if it exists
@@ -83,7 +106,19 @@ jobs:
       run: echo "CACHE_TIMESTAMP=$(date +%Y%m%d%H%M%S)" >> $GITHUB_OUTPUT
       
     - name: Save cookies cache with timestamp
-      uses: actions/cache/save@v4
+      uses: actions/cache/save@v3
       with:
         path: google_cookies.json
         key: google_cookies-${{ steps.timestamp_generator.outputs.CACHE_TIMESTAMP }}
+        
+    - name: Save pip cache
+      uses: actions/cache/save@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        
+    - name: Save Playwright cache
+      uses: actions/cache/save@v3
+      with:
+        path: ~/.cache/ms-playwright
+        key: ${{ runner.os }}-playwright-${{ hashFiles('**/playwright.version') }}
