--- a/.github/workflows/Keepalive.yml
+++ b/.github/workflows/Keepalive.yml
@@ -1,8 +1,8 @@
-name: IDX-Keepalive 2-Hour Intervals
+name: IDX-Keepalive 2小时
 on:
   schedule:
     # Beijing time is UTC+8, schedule in UTC
-    # Run at 6:00, 8:00, 10:00, 12:00, 14:00, 16:00, 18:00, 20:00, 22:00 (Beijing time)
+    # Run at 6:00, 7:00 北京时间
     - cron: '0 22,23 * * *'
   # Manual trigger option
   workflow_dispatch:
