--- a/.github/workflows/nvidia.yml
+++ b/.github/workflows/nvidia.yml
@@ -1,7 +1,7 @@
 name: nvidia-Keepalive
 on:
   schedule:
-    - cron: '0 19 */3 * *'
+    - cron: '0 19 * * 1,3,5'
   workflow_dispatch:
     inputs:
       website_url:
